<resources>
    <string name="app_name">Base Camp</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="info">Info</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="all_fields_required">All the fields are required</string>
    <string name="incorrect_mail">Enter a valid email</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="password_need_six_characters">The password must contain at least 6 characters</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="send_email">Send email</string>
    <string name="email_sent">Email sent to %1$s</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="editProfile">Edit Profile</string>
    <string name="you_need_a_name">You need to have a name!</string>
    <string name="you_need_an_alias">You need to have an alias!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_picture">Add picture</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="you_dont_have_camera_permissions">You have denied Storage permission and you will no longer be able to take/pick pictures unless you grant it manually</string>
    <string name="could_not_load_your_picture">Could not load image</string>
    <string name="alias">Alias</string>
    <string name="addNews">Add News</string>
    <string name="editNews">Edit News</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="select_author">Select News Author</string>
    <string name="are_you_sure_you_want_to_delete_these_news">Are you sure you want to delete these news?</string>
    <string name="are_you_sure_you_want_to_delete_this_information">Are you sure you want to delete this information?</string>
    <string name="addInfo">Add Information</string>
    <string name="editInfo">Edit Information</string>
    <string name="participants">Participants</string>
    <string name="families">Families</string>
    <string name="capo">Boss: %1$s</string>
    <string name="return_to_app">Return</string>
    <string name="delete_news">Delete News</string>
    <string name="delete_info">Delete Information</string>
    <string name="version">Version</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="news_will_be_published">These news will be published on %1$s</string>

</resources>
