<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/screen_addinfo_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:padding="12dp"
                android:text="@string/addInfo"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="32sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:id="@+id/screen_addinfo_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/error" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/edit"
                    android:text="@string/something_went_wrong"
                    android:textColor="@color/errorColor" />

            </LinearLayout>


            <ProgressBar
                android:id="@+id/screen_addinfo_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/screen_addinfo_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/red_button_background"
                android:padding="12dp"
                android:src="@drawable/delete"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/screen_addinfo_title_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/title"
                    android:inputType="textCapSentences"
                    android:maxLength="60"
                    android:textColor="@color/textColor"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/HintStyle" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/screen_addinfo_text_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/text"
                    android:inputType="textMultiLine"
                    android:textColor="@color/textColor"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/HintStyle" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/screen_addinfo_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/errorColor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">


                <Button
                    android:id="@+id/screen_addinfo_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showAsAction="always"
                    tools:ignore="AlwaysShowAction" />

                <ProgressBar
                    android:id="@+id/screen_addinfo_button_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/screen_addinfo_save_button"
                    app:layout_constraintEnd_toEndOf="@+id/screen_addinfo_save_button"
                    app:layout_constraintStart_toStartOf="@+id/screen_addinfo_save_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>