<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="1"
                android:padding="12dp"
                android:text="@string/editProfile"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="32sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="32sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:id="@+id/dialog_editprofile_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/error" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:src="@drawable/edit"
                    android:text="@string/something_went_wrong"
                    android:textColor="@color/errorColor" />

            </LinearLayout>


            <ProgressBar
                android:id="@+id/dialog_edit_profile_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dialog_editprofile_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/background_green_stroked_points_rounded">

                <ImageView
                    android:id="@+id/dialog_editprofile_cover_picture"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/dialog_editprofile_delete_cover_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/gray_button_background"
                    android:padding="8dp"
                    android:src="@drawable/close"
                    android:tint="@android:color/white"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/dialog_editprofile_add_cover_picture"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:elevation="4dp"
                    android:padding="11dp"
                    app:layout_constraintBottom_toBottomOf="@id/dialog_editprofile_constraint_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/dialog_editprofile_constraint_layout"
                    app:srcCompat="@drawable/add" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_editprofile_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_editprofile_name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"
                    android:maxLength="60"
                    android:textColor="@color/textColor"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/HintStyle" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_editprofile_alias_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_editprofile_alias_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/alias"
                    android:inputType="textPersonName"
                    android:maxLength="60"
                    android:textColor="@color/textColor"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/HintStyle" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_editprofile_description_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/textColor"
                    android:theme="@style/AppTheme"
                    app:hintTextAppearance="@style/HintStyle" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/dialog_editprofile_error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="@color/errorColor" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">


                <Button
                    android:id="@+id/dialog_editprofile_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_background"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showAsAction="always"
                    tools:ignore="AlwaysShowAction" />

                <ProgressBar
                    android:id="@+id/dialog_editprofile_button_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/dialog_editprofile_save_button"
                    app:layout_constraintEnd_toEndOf="@+id/dialog_editprofile_save_button"
                    app:layout_constraintStart_toStartOf="@+id/dialog_editprofile_save_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>