<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/screen_info_add_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/gray_button_background"
        android:elevation="4dp"
        android:padding="8dp"
        android:src="@drawable/add"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:padding="12dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="32sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/navigationTabsBackground"
        app:layout_constraintTop_toBottomOf="@id/textView2" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ProgressBar
                android:id="@+id/screen_info_list_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:visibility="visible" />

            <RelativeLayout
                android:id="@+id/screen_info_list_frame_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/screen_info_families"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navigationTabsBackground"
                android:orientation="vertical"
                android:paddingBottom="1dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/fragmentBackground"
                    android:paddingStart="12dp"
                    android:paddingTop="22dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="22dp"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/families"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/screen_info_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/navigationTabsBackground"
                android:orientation="vertical"
                android:paddingBottom="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/fragmentBackground"
                    android:paddingStart="12dp"
                    android:paddingTop="22dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="22dp"
                    android:textColor="@color/textColor"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/participants"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/screen_info_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <TextView
                android:id="@+id/screen_info_version_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:textAlignment="center"
                android:textColor="@color/disabledBackground"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                tools:layout_editor_absoluteX="12dp"
                tools:text="TITOL DE LA NOTICIA" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>